# MediaPlayer

./: README.md
app/: build.gradle
app/src/androidTest/java/cn/cnr/mediaplayerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/cnr/mediaplayerdemo/: GLRenderer.java  MainActivity.java  OpenGLActivity.java  TestActivity.java  WidgetActivity.java
app/src/main/res/layout/: activity_main.xml  activity_open_gl.xml  activity_test.xml  activity_widget.xml
app/src/test/java/cn/cnr/mediaplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/cn/cnr/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AndroidLog.h  AudioPlayer.cpp  AudioPlayer.h  AudioQueue.cpp  AudioQueue.h  OpenSLPlayer.cpp  OpenSLPlayer.h  native-lib.cpp
player/src/main/java/cn/cnr/player/: AudioPlayer.java  CNAudioPlayer.java  CNPlayer.java  CNTrace.java  VideoPlayer.java
player/src/test/java/cn/cnr/player/: ExampleUnitTest.java
